[QUAR-1552] Add wrapTitle prop to BpkNavigationBar to prevent title truncation
Adds a wrapTitle boolean prop to BpkNavigationBar that disables the
white-space: nowrap / text-overflow: ellipsis behaviour on the title,
allowing long titles (e.g. de-DE DSA modal title) to wrap onto multiple
lines. BpkBottomSheet passes wrapTitle unconditionally so bottom sheet
titles always wrap.

--- a/packages/bpk-component-navigation-bar/src/BpkNavigationBar.module.scss
+++ b/packages/bpk-component-navigation-bar/src/BpkNavigationBar.module.scss
@@ -68,6 +68,12 @@
     &--on-dark {
       color: tokens.$bpk-text-primary-inverse-day;
     }
+
+    &--wrap {
+      white-space: normal;
+      overflow: visible;
+      text-overflow: unset;
+    }
   }
 
   &__title-container {
